--- a/style.css
+++ b/style.css
@@ -180,3 +180,15 @@ body.theme-pixel {
   background-color: blue;
   color: white;
 }
+/* Link do MediaFire */
+#mediafire-link {
+  display: block;
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid blue;
+  border-radius: 5px;
+  text-decoration: none;
+  color: blue;
+}
+
+#mediafire-link:hover { background-color: blue; color: white; }
