--- a/styles.css
+++ b/styles.css
@@ -379,3 +379,21 @@ body.theme-custom #chatbox, body.theme-custom #chat-btn {
 #conteudo-materia {
     background-color: rgba(255, 255, 255, 0.7); /* Branco com 70% de transparência */
 }
+#mediafire-container a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: 2px solid white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+/* Efeito hover */
+#mediafire-container a:hover {
+    background-color: white;
+    color: black;
+}
