--- a/styles.css
+++ b/styles.css
@@ -417,3 +417,30 @@ body.theme-custom #chatbox, body.theme-custom #chat-btn {
     background-color: white;
     color: black;
 }
+
+.download-box {
+    text-align: center;
+    margin-top: 15px;
+    padding: 10px;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+
+#download-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: 2px solid white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+/* Efeito hover */
+#download-btn:hover {
+    background-color: white;
+    color: black;
+}
