--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,10 @@ body.theme-pixel {
 }
 /* Estilização do botão Temas */
 #temas-btn {
-    position: fixed;
+    position: relative;
+   width: 100%;
+   display: flex;
+    justify-content: center;
     top: 10px;
     left: 10px;
     padding: 10px 20px;
