--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
   height: 70vh;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -51,7 +51,7 @@ body {
   text-align: center;
   position: relative;
   overflow-y: auto;
-  backdrop-filter: blur(10px);
+  scroll-behavior: smooth;
 }
 
 /* Botão MediaFire */
@@ -160,10 +160,7 @@ body.theme-pixel {
 
 /* Quadro de temas (inicialmente oculto) */
 #quadro-temas {
-    position: relative;
-   width: 100%;
-   display: flex;
-    justify-content: center;
+    position: fixed;
     top: 50px;
     left: 10px;
     background-color: white;
@@ -447,31 +444,4 @@ body.theme-custom #chatbox, body.theme-custom #chat-btn {
 #download-btn:hover {
     background-color: white;
     color: black;
-}
-/* Para telas menores que 768px (celulares) */
-@media screen and (max-width: 768px) {
-    .container {
-        width: 95%;
-        height: auto;
-        padding: 10px;
-    }
-
-    .botoes-esquerda, .botoes-direita {
-        flex-direction: column; /* Empilha os botões verticalmente */
-        position: static; /* Remove a posição absoluta */
-        transform: none; /* Remove transformações */
-        text-align: center;
-    }
-
-    .botoesbutton {
-        width: 100%; /* Faz os botões ocuparem toda a largura */
-        font-size: 14px; /* Reduz o tamanho da fonte */
-        padding: 8px;
-    }
-
-    #chatbox {
-        width: 90%;
-        left: 5%;
-        bottom: 10px;
-    }
 }
