--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,9 @@ body {
   height: 70vh;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
   display: flex;
   flex-direction: column;
   justify-content: center;
