--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ body {
 }
 
 body.theme-Acherongif {
-  background-image: url('https://i.pinimg.com/originals/23/98/c4/2398c4cea3a7f072ecf614f127422b91.gif');
+  background-image: url('Acherongif.gif');
   background-repeat: no-repeat;        /* remove a repetição */
   background-size: cover;              /* escala para cobrir toda a área */
   background-position: center center;  /* centraliza o GIF */
