--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,16 @@
   gap: 10px;
   z-index: 100;
 }
-
+p {
+   text-align: justify;
+   padding: 0 20px;  
+}
+h1{
+  text-align: center;
+}
+h3{
+  text-align: center;
+}
 #theme-selector button {
   background-color: white;
   color: black;
