--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ body {
 
 .container {
   background-color: white;
-  width: 75%;
-  height: 70vh;
+  width: 80%;
+  height: 74vh;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0);
@@ -66,9 +66,10 @@ body {
 }
 /* Exemplo: container no qual você quer aplicar o scroll incremental */
 .scroll-step-container {
-  max-height: 300px;       /* altura fixa para ativar o scroll */
+  height: 65vh;      /* altura fixa para ativar o scroll */
   overflow-y: auto;        /* permite o scroll vertical */
   scroll-behavior: smooth; /* animação suave ao usar scrollBy() */
+  position: absolute;
 }
 
 /* Botão MediaFire */
@@ -130,6 +131,7 @@ body {
 
 .botoesbutton i {
   font-size: 18px;
+  
 }
 
 .botoesbutton:hover {
@@ -256,9 +258,11 @@ body.theme-pixel {
     background-color: #ffffff;
     padding: 15px;
     border-radius: 5px;
-    width: 90%;
+    width: 100%;
+    height: 174vh;
     text-align: left;
     margin-top: 15px;
+    position: relative;
 }
 /* Tema Matemática */
 body.theme-math {
